update solution & readme

--- a/week1/solution/index.html
+++ b/week1/solution/index.html
@@ -16,45 +16,48 @@
     </header>
     <main>
         <aside class="search-bar">
-            <img src="assets/search.svg" alt="search">
-            <input type="text" placeholder="Search"/>
+            <img src="./assets/search.svg" alt="search">
+            <label for="search-result"></label>
+            <input id="search-result" type="text" placeholder="Search"/>
         </aside>
-        <section>
-            <div class="email-title">
-                <h2>William Smith</h2>
-                <span>4 months ago</span>
-            </div>
-            <h3>Meeting Tomorrow</h3>
-            <p>Hi, let's have a meeting tomorrow to discuss the project. I've been reviewing the project details and have some ideas I'd like to share. It's crucial that we align on our...</p>
-            <div class="option-btn-group">
-                <button>meeting</button>
-                <button class="black-btn">work</button>
-                <button>important</button>
-            </div>
-        </section>
-        <section>
-            <div class="email-title">
-                <h2>Alice Smith</h2>
-                <span>4 months ago</span>
-            </div>
-            <h3>Re: Project Update</h3>
-            <p>Thank you for the project update. It looks great! I've gone through the report, and the progress is impressive. The team has done a fantastic job, and I appreciate the hard...</p>
-            <div class="option-btn-group">
-                <button class="black-btn">work</button>
-                <button>important</button>
-            </div>
-        </section>
-        <section>
-            <div class="email-title">
-                <h2>Bob Johnson</h2>
-                <span>10 months ago</span>
-            </div>
-            <h3>Weekend Plans</h3>
-            <p>Any plans for the weekend? I was thinking of going hiking in the nearby mountains. It's been a while since we had some outdoor fun. If you're interested, let me know, an...</p>
-            <div class="option-btn-group">
-                <button>personal</button>
-            </div>
-        </section>
+        <div class="email-list">
+            <section>
+                <div class="email-title">
+                    <h2>William Smith</h2>
+                    <span>4 months ago</span>
+                </div>
+                <h3>Meeting Tomorrow</h3>
+                <p>Hi, let's have a meeting tomorrow to discuss the project. I've been reviewing the project details and have some ideas I'd like to share. It's crucial that we align on our...</p>
+                <div class="option-btn-group">
+                    <button>meeting</button>
+                    <button class="black-btn">work</button>
+                    <button>important</button>
+                </div>
+            </section>
+            <section>
+                <div class="email-title">
+                    <h2>Alice Smith</h2>
+                    <span>4 months ago</span>
+                </div>
+                <h3>Re: Project Update</h3>
+                <p>Thank you for the project update. It looks great! I've gone through the report, and the progress is impressive. The team has done a fantastic job, and I appreciate the hard...</p>
+                <div class="option-btn-group">
+                    <button class="black-btn">work</button>
+                    <button>important</button>
+                </div>
+            </section>
+            <section>
+                <div class="email-title">
+                    <h2>Bob Johnson</h2>
+                    <span>10 months ago</span>
+                </div>
+                <h3>Weekend Plans</h3>
+                <p>Any plans for the weekend? I was thinking of going hiking in the nearby mountains. It's been a while since we had some outdoor fun. If you're interested, let me know, an...</p>
+                <div class="option-btn-group">
+                    <button>personal</button>
+                </div>
+            </section>
+        </div>
     </main>
 </body>
 </html>
