--- a/week2/demo/index.html
+++ b/week2/demo/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div>A</div>
-    <div>B</div>
-    <div>C</div>
+    <div class="grid-container">
+        <div id="col-2" class="elem">A</div>
+        <div class="elem">B</div>
+        <div class="elem">C</div>
+    </div>
 </body>
 </html>
