--- a/week2/solution/responsive/index.html
+++ b/week2/solution/responsive/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div>A</div>
+    <div>B</div>
+    <div>C</div>
+    <div>D</div>
 </body>
 </html>
