--- a/week2/demo/index.html
+++ b/week2/demo/index.html
@@ -3,14 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>demo</title>
 </head>
 <body>
-    <div class="grid-container">
-        <div id="col-2" class="elem">A</div>
-        <div class="elem">B</div>
-        <div class="elem">C</div>
-    </div>
+    <div class="p-4 mx-4 my-6 bg-green-600 w-[20rem] h-4 border-1 border-blue">sdaffdsfsf</div>
+    <!-- <div class="container">
+        <aside class="left-col"></aside>
+        <main class="main-col">
+            <div class="up-row">
+                <div class="main-left-col">
+                    <div class="main-left-up-row"></div>
+                    <div class="main-left-down-row">
+                        <div class="left-cell"></div>
+                        <div class="right-cell"></div>
+                    </div>
+                </div>
+                <div class="main-right-col"></div>
+            </div>
+            <div class="down-row">
+                <div class="down-row-left"></div>
+                <div class="down-row-right"></div>
+            </div>
+        </main>
+    </div> -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </body>
 </html>
