--- a/week5/sol/starter/index.html
+++ b/week5/sol/starter/index.html
@@ -20,13 +20,13 @@
       <form class="login-form w-[30%] mx-auto">
         <div class="mb-5">
           <label
-            for="email"
+            for="email-l"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
             >Your email</label
           >
           <input
             type="email"
-            id="email"
+            id="email-l"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             placeholder="name@email.com"
             required
@@ -34,13 +34,13 @@
         </div>
         <div class="mb-5">
           <label
-            for="password"
+            for="password-l"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
             >Your password</label
           >
           <input
             type="password"
-            id="password"
+            id="password-l"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             required
           />
@@ -48,14 +48,14 @@
         <div class="flex flex-row items-center justify-between mb-5">
           <div>
             <input
-              id="remember"
+              id="remember-l"
               type="checkbox"
               value=""
               class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800"
               required
             />
             <label
-              for="remember"
+              for="remember-l"
               class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
               >Remember me</label
             >
@@ -75,13 +75,13 @@
       <form class="register-form hidden max-w-sm mx-auto">
         <div class="mb-5">
           <label
-            for="email"
+            for="email-r"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
             >Your email</label
           >
           <input
             type="email"
-            id="email"
+            id="email-r"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             placeholder="name@email.com"
             required
@@ -89,13 +89,13 @@
         </div>
         <div class="mb-5">
           <label
-            for="password"
+            for="password-r"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
             >Your password</label
           >
           <input
             type="password"
-            id="password"
+            id="password-r"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             required
           />
@@ -107,7 +107,7 @@
             >Retype password</label
           >
           <input
-            type="re-password"
+            type="password"
             id="re-password"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             required
@@ -116,14 +116,14 @@
         <div class="flex flex-row items-center justify-between mb-5">
           <div>
             <input
-              id="remember"
+              id="remember-r"
               type="checkbox"
               value=""
               class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800"
               required
             />
             <label
-              for="remember"
+              for="remember-r"
               class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
               >Remember me</label
             >
@@ -143,6 +143,6 @@
     </main>
     <footer></footer>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
